# pr2_plugs

./: .hgignore  CMakeLists.txt  hgignore.sh  stack.xml
checkerboard_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  error.html  index.html  mainpage.dox  manifest.xml  package.xml
checkerboard_pose_estimation/include/checkerboard_pose_estimation/: cvcalibinit_lowres.h  detector.h  estimator.h  ros_detector.h
checkerboard_pose_estimation/src/: cvcalibinit_lowres.cpp  detector.cpp  estimator.cpp  ros_detector.cpp
joint_trajectory_generator/: CMakeLists.txt  mainpage.dox  manifest.xml
joint_trajectory_generator/src/: joint_trajectory_generator.cpp  trajectory_generation.cpp
joint_trajectory_generator/test/: trajectory_unwrap_test.cpp  trajectory_unwrap_test.launch
outlet_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
outlet_pose_estimation/include/outlet_pose_estimation/: detector.h  estimator.h  features.h  learning.h  one_way_descriptor_base.h  outlet_detector.h  outlet_tuple.h  pca_features.h  planar.h
outlet_pose_estimation/src/: detector.cpp  estimator.cpp
outlet_pose_estimation/src/liboutlet/: affine_transform.cpp  constellation.cpp  features.cpp  generalized_hough.cpp  geometric_hash.cpp  gh_outlets.cpp  learning.cpp  one_way_descriptor.cpp  one_way_descriptor_base.cpp  one_way_outlets.cpp  outlet_detector.cpp  outlet_model.cpp  outlet_tuple.cpp  pca_features.cpp  planar.cpp
pr2_image_snapshot_recorder/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_image_snapshot_recorder/action/: ImageSnapshot.action
pr2_image_snapshot_recorder/scripts/: image_snapshotter.py  send_trigger_goal.py
pr2_plugs/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
pr2_plugs_actions/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  package.xml  setup.py
pr2_plugs_actions/config/: cart_ik_seeds.yaml  detect_outlet_waypoints.yaml  joint_trajectories.yaml  outlet_approach_poses.yaml  plug_description.yaml  pr2_plug_description.yaml  prh_plug_description.yaml  prj_plug_description.yaml  prl_plug_description.yaml  sim_calibration.yaml
pr2_plugs_actions/include/pr2_plugs_actions/: align_base.h  allign_base.h  move_base_omnidirectional.h
pr2_plugs_actions/include/pr2_plugs_core/: allign_base.h
pr2_plugs_actions/launch/: detect_outlet.launch  detect_plug.launch  plug_actions.launch  plug_application.launch  plug_web.launch  pr2_arm_ik.launch  pr2_base_application.launch  pr2_base_example.launch  pr2_plug_description.xml  prl_plug_description.xml
pr2_plugs_actions/scripts/: battery.py  calibration_plugin.py  detect_outlet.py  detect_outlet_sm.py  detect_plug.py  detect_plug_on_base.py  detect_wall_norm.py  fetch_plug.py  fetch_plug_sm.py  generate_move_arm_actions.py  load_plug_description.py  load_plugin_calibration.py  outlet_server.py  plug_in.py  plug_in_sm.py  plugin.py  recharge_application.py  recharge_application_monitor.py  recharge_toplevel.py  recharge_web_adaptor.py  stow_plug.py  tf_publish.py  vision_detect_outlet.py  vision_detect_plug.py  wiggle_plug.py  wiggle_plug2.py
pr2_plugs_actions/scripts/test_clients/: vision_detect_outlet_client.py  vision_detect_plug_client.py
pr2_plugs_actions/src/: align_base.cpp  allign_base.cpp  move_base_omnidirectional.cpp  vision_detect_outlet.cpp  vision_detect_plug.cpp
pr2_plugs_actions/src/pr2_plugs_actions/: posestampedmath.py  tf_util.py
pr2_plugs_actions/test/: align_base_test.py  app_plugin.py  app_unplug.py  detect_outlet_test.py  detect_plug_on_base_test.py  detect_plug_test.py  detect_wall_norm_test.py  fetch_plug_test.py  open_gripper.py  vision_detect_outlet_test.py  vision_detect_plug_test.py  wiggle_plug_test.py
pr2_plugs_actions/test/action_server_tests/: detect_outlet_test.cpp  detect_outlet_test.launch  detect_plug_test.cpp  detect_plug_test.launch  detect_wall_norm_test.cpp  detect_wall_norm_test.launch  fetch_and_stow_plug_test.cpp  fetch_and_stow_plug_test.launch  vision_detect_outlet_and_plug_test.cpp  vision_detect_outlet_and_plug_test.launch  wiggle_plug_test.cpp  wiggle_plug_test.launch
pr2_plugs_common/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_plugs_common/include/pr2_plugs_common/: detector_filter.h  joint_space_move.h
pr2_plugs_common/src/: covariance_inserter.cpp  detector_filter.cpp  detector_stub.cpp  pose_to_tf.cpp
pr2_plugs_common/test/: joint_space_move_test.cpp  joint_space_move_test.launch
pr2_plugs_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pr2_plugs_msgs/action/: AlignBase.action  AllignBase.action  DetectOutlet.action  DetectOutletSM.action  DetectPlugOnBase.action  DetectWallNorm.action  FetchPlug.action  FetchPlugSM.action  PlugIn.action  PlugInSM.action  Plugin.action  Recharge.action  RechargeSM.action  StowPlug.action  VisionOutletDetection.action  VisionPlugDetection.action  WigglePlug.action  WigglePlug2.action
pr2_plugs_msgs/msg/: OutletPose.msg  OutletPoseArray.msg  RechargeCommand.msg  RechargeState.msg
pr2_plugs_msgs/srv/: GetOutlets.srv  RechargeRequest.srv
stereo_wall_detection/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  wall_extractor.launch
stereo_wall_detection/src/: service_trigger.cpp  wall_extractor.cpp  wall_extractor_pcl.cpp
stereo_wall_detection/src/ANN/: ANN.cpp  bd_tree.cpp  bd_tree.h  brute.cpp  kd_dump.cpp  kd_fix_rad_search.h  kd_pr_search.h  kd_search.h  kd_tree.cpp  kd_tree.h  kd_util.cpp  perf.cpp  pr_queue.h  pr_queue_k.h
stereo_wall_detection/src/cloud_geometry/: angles.cpp  areas.cpp  distances.cpp  intersections.cpp  nearest.cpp  point.cpp  projections.cpp  statistics.cpp  transforms.cpp
stereo_wall_detection/src/cloud_kdtree/: kdtree_ann.cpp
stereo_wall_detection/src/sample_consensus/: msac.cpp  sac.cpp  sac_model.cpp  sac_model_normal_plane.cpp  sac_model_plane.cpp
visual_pose_estimation/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
visual_pose_estimation/src/: planar.cpp  pose_estimator.cpp
(+57 files in other folders)
