<package>
  <name>pr2_image_snapshot_recorder</name>
  <version>1.0.19</version>
  <description>pr2_image_snapshot_recorder</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_image_snapshot_recorder</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
  <author>Kevin Watts</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosbag</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosbag</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>rosbag</test_depend> -->

</package>
