<package>
  <name>pr2_plugs_actions</name>
  <version>1.0.7</version>
  <description>pr2_plugs_actions contains actions specific to plugging in the PR2 robot.</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_plugs_actions</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Jon Bohren</author>
  <author>Patrick Mihelich</author>
  <author>Wim Meeussen</author>
  <author>and Melonee Wise</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>pr2_common_action_msgs</build_depend>
  <build_depend>pr2_plugs_common</build_depend>
  <build_depend>pr2_plugs_msgs</build_depend>
  <build_depend>stereo_wall_detection</build_depend>
  <build_depend>checkerboard_pose_estimation</build_depend>
  <build_depend>outlet_pose_estimation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>joint_trajectory_action_tools</build_depend>
  <build_depend>pr2_arm_move_ik</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>pr2_image_snapshot_recorder</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rostest</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_controller_manager</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pr2_common_action_msgs</run_depend>
  <run_depend>pr2_plugs_common</run_depend>
  <run_depend>pr2_plugs_msgs</run_depend>
  <run_depend>stereo_wall_detection</run_depend>
  <run_depend>checkerboard_pose_estimation</run_depend>
  <run_depend>outlet_pose_estimation</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>joint_trajectory_action_tools</run_depend>
  <run_depend>pr2_arm_move_ik</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>pr2_image_snapshot_recorder</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>pr2_controller_manager</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>tf_conversions</test_depend> -->
  <!-- <test_depend>tf2_ros</test_depend> -->
  <!-- <test_depend>tf2_geometry_msgs</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>pr2_common_action_msgs</test_depend> -->
  <!-- <test_depend>pr2_plugs_common</test_depend> -->
  <!-- <test_depend>pr2_plugs_msgs</test_depend> -->
  <!-- <test_depend>stereo_wall_detection</test_depend> -->
  <!-- <test_depend>checkerboard_pose_estimation</test_depend> -->
  <!-- <test_depend>outlet_pose_estimation</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>joint_trajectory_action_tools</test_depend> -->
  <!-- <test_depend>pr2_arm_move_ik</test_depend> -->
  <!-- <test_depend>costmap_2d</test_depend> -->
  <!-- <test_depend>base_local_planner</test_depend> -->
  <!-- <test_depend>pr2_image_snapshot_recorder</test_depend> -->
  <!-- <test_depend>smach</test_depend> -->
  <!-- <test_depend>smach_ros</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

</package>

